增加pay和cancel取消接口，接入客户端幂等键来保证重试带来的一系列安全问题
